--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -7,9 +7,11 @@
 } */
 
 .title{
+    margin-top: 60px;
  text-align: center;   
 padding-top: 90px;
 color: rgb(97, 95, 95);
+margin-bottom: 60px;
 }
 .list{
 width: 100%;
