--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,46 +1,12 @@
-.item{
-    height: 100%;
-    flex-grow: 1;
-    display: flex;
-background-color: antiquewhite;
-border-radius: 5% ;
-margin-bottom: 10px;
-border:0.5px solid rgb(211, 191, 163) ;
-position: relative;
-transition: box-shadow 550ms cubic-bezier(0.4, 0, 0.2, 1);
-cursor: pointer;
-}
-.item:hover{
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.img{
-    margin-left: 20px;
-    border-radius: 15%;
-    border: 0.5px solid transparent;
-    background-color: rgb(255, 246, 235);
-    margin-right: 15px;
-     position: relative;
-}
-.status{
-     display: inline-block; 
-   position: absolute;
-   top: 20px;
-   left: 5px;
-   z-index: 1000;
-    content: '';
-  
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    border: 1px solid rgb(255, 255, 255);
-    background-color: rgb(211, 199, 199);
+.list{
+width:700;
+background-color:white;
+margin-left: auto;
+margin-right: auto;
 }
 
-.statusOn{
-    composes: status;
-    background-color: rgb(40, 223, 16);
-}
-.statusOff{
-    composes: status;
-        background-color: rgb(237, 14, 14);
-}
+
+
+
+
+
