--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,10 +1,10 @@
-/* .main{
+.section{
     width: 600px;
     height: 300px;
     background-color:white;
     margin-left: auto;
     margin-right: auto;
-} */
+}
 
 .title{
     margin-top: 60px;
